--- a/index.ipynb
+++ b/index.ipynb
@@ -321,7 +321,7 @@
     "    if model.pretrained and len(learn.layer_groups) > 1:\n",
     "        learn.freeze()\n",
     "    if init:\n",
-    "        apply_init(model, nn.init.kaiming_normal_)\n",
+    "        apply_init(model, torch.nn.init.kaiming_normal_)\n",
     "\n",
     "    return learn\n",
     "\n",
