--- a/index.ipynb
+++ b/index.ipynb
@@ -381,9 +381,8 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "display_name": "Python 3.9.5 64-bit ('iceseg': conda)",
+   "name": "python395jvsc74a57bd055da51211d2b485401f83d8f81f53d573c41413a25f37947948be4fafcf8b118"
   }
  },
  "nbformat": 4,
