--- a/index.ipynb
+++ b/index.ipynb
@@ -373,9 +373,9 @@
    "source": [
     "# References\n",
     "\n",
-    "> The implementation of the deep learning models was derived from https://github.com/yassouali/pytorch-segmentation\n",
+    "- The implementation of the deep learning models was derived from https://github.com/yassouali/pytorch-segmentation\n",
     "\n",
-    "> The implementation of the convolutional conditional random field used for postprocessing was derived from https://github.com/MarvinTeichmann/ConvCRF "
+    "- The implementation of the convolutional conditional random field used for postprocessing was derived from https://github.com/MarvinTeichmann/ConvCRF "
    ]
   }
  ],
