--- a/ice_seg.ipynb
+++ b/ice_seg.ipynb
@@ -23,6 +23,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Install Fastai: \n",
+    "\n",
+    "- Create a conda environment\n",
+    "- Install fastai using ```conda install -c fastchan fastai anaconda```\n",
+    "- For help with installation: https://docs.fast.ai/#Installing"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
